--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@throneless/libsignal-service": "^1.1.1",
     "dotenv": "^8.2.0",
     "jvsdisplayotron": "^1.1.0",
+    "node-localstorage": "^2.1.6",
     "node-nmap": "^4.0.0"
   }
 }
